--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -6,6 +5,7 @@ body {
   -moz-osx-font-smoothing: "Roboto", sans-serif;
   font-style: normal;
 }
+
 h1,
 h2,
 h3,
@@ -15,6 +15,7 @@ h6,
 p {
   margin: 0;
 }
+
 :root {
   --primary: #5e3bee;
   --heading-color: #282938;
@@ -24,6 +25,7 @@ p {
   --black: #000000;
   --white: #ffffff;
 }
+
 .btn {
   font-family: "Roboto";
   display: inline-block;
@@ -46,24 +48,29 @@ p {
   -ms-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
 }
+
 .btn-outline-primary {
   color: var(--primary);
   background-color: var(--white);
   border: 1px solid var(--primary);
 }
+
 .btn-outline-primary:hover {
   color: var(--white);
   background-color: var(--primary);
 }
+
 .btn-primary {
   color: var(--white);
   background-color: var(--primary);
   border: 1px solid var(--primary);
 }
+
 .btn-primary:hover {
   color: var(--primary);
   background-color: var(--white);
 }
+
 .btn-github {
   color: var(--white);
   background-color: var(--github);
@@ -75,6 +82,7 @@ p {
   box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.95);
   gap: 16px;
 }
+
 .btn-github:hover {
   color: var(--github);
   background-color: var(--white);
@@ -154,14 +162,16 @@ h2 {
   left: 0;
   right: 0;
 }
-.navbar--items > ul {
+
+.navbar--items>ul {
   list-style: none;
   display: flex;
   align-items: flex-start;
   gap: 42.667px;
   text-decoration: none;
 }
-.navbar--items ul > li > a {
+
+.navbar--items ul>li>a {
   text-decoration: none;
 }
 
@@ -173,6 +183,7 @@ h2 {
   line-height: 24px;
   cursor: pointer;
 }
+
 .navbar--active-content {
   color: var(--primary);
 }
@@ -186,21 +197,25 @@ h2 {
   gap: 32px;
   background-color: var(--bg-shade);
 }
+
 .hero--section--content-box {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
 }
+
 .hero--section--content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 21.333px;
 }
-.hero--section--content--box > button {
+
+.hero--section--content--box>button {
   margin-top: 21.333px;
 }
+
 .hero--section--title {
   color: var(--heading-color);
   font-size: 74.667px;
@@ -208,28 +223,36 @@ h2 {
   line-height: 90px;
   align-self: stretch;
 }
+
 .hero--section--title--color {
   color: var(--primary);
 }
+
 .hero--section-description {
   color: var(--darkblue);
   font-size: 24px;
   font-weight: 400;
   line-height: 36px;
-  max-width: 100%; /* Maksimum genişlik olarak tam genişliği belirler */
-  word-wrap: break-word; /* Satır sonuna gelince kelimelerin bölünmesini sağlar */
-  box-sizing: border-box; /* Padding ve border'ı genişliğe dahil eder */
+  max-width: 100%;
+
+  word-wrap: break-word;
+
+  box-sizing: border-box;
+
 }
 
 .hero--section--img {
   display: flex;
-  justify-content: flex-start;
-  width: 100%; /* veya istediğiniz genişlik */
+
+  width: 100%;
+
 }
-.hero--section--img > img {
-  width: 500px;
+
+.hero--section--img>img {
+  width: 400px;
   height: 100%;
   margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -243,12 +266,14 @@ h2 {
   align-items: flex-start;
   gap: 106.667px;
 }
+
 .skills--section--heading {
   color: var(--heading-color);
   font-size: 64px;
   font-weight: 700;
   line-height: 77px;
 }
+
 .skills--section--container {
   display: grid;
   justify-content: center;
@@ -256,6 +281,7 @@ h2 {
   gap: 42.6px;
   grid-template-columns: repeat(4, 1fr);
 }
+
 .skills--section--card {
   display: flex;
   padding: 32px;
@@ -267,12 +293,15 @@ h2 {
   background: var(--bg-shade);
   min-height: 250px;
 }
+
 .skills--section--card:hover {
   border-bottom: 4px solid var(--primary);
 }
+
 .skills--section--card:hover .skills--section--description {
   color: var(--darkblue);
 }
+
 .skills--section--img {
   display: flex;
   padding: 13.3px;
@@ -283,6 +312,7 @@ h2 {
   background: #fff;
   box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
 }
+
 .skills--section--card--content {
   display: flex;
   flex-direction: column;
@@ -290,12 +320,14 @@ h2 {
   gap: 32px;
   align-self: stretch;
 }
+
 .skills--section--title {
   color: var(--heading-color);
   font-size: 32px;
   font-weight: 700;
   line-height: 45px;
 }
+
 .skills--section--description {
   color: var(--black);
   font-size: 21.3px;
@@ -314,11 +346,11 @@ h2 {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.about--section--img > img {
+.about--section--img>img {
   width: 100%;
   height: 100%;
-  
-  
+
+
 }
 
 
@@ -329,18 +361,21 @@ h2 {
   align-items: flex-start;
   gap: 80px;
 }
+
 .portfolio--container-box {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
 }
+
 .portfolio--container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 21.3px;
 }
+
 .portfolio--section--container {
   display: flex;
   align-items: center;
@@ -348,13 +383,16 @@ h2 {
   gap: 42.6px;
   width: 100%;
 }
+
 .portfolio--section--img {
   border-radius: 8px;
   width: 100%;
 }
-.portfolio--section--img > img {
+
+.portfolio--section--img>img {
   width: 100%;
 }
+
 .portfolio--section--card {
   display: flex;
   flex-direction: column;
@@ -367,6 +405,7 @@ h2 {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
+
 .portfolio--section--card--content {
   display: flex;
   padding: 32px;
@@ -375,9 +414,11 @@ h2 {
   gap: 32px;
   align-self: stretch;
 }
+
 .portfolio--section--title {
   color: var(--heading-color);
 }
+
 .portfolio--link {
   text-decoration: none;
   display: flex;
@@ -386,6 +427,7 @@ h2 {
   padding-bottom: 10.6px;
   font-weight: 600;
 }
+
 .portfolio--section--card:hover path {
   stroke: #006b6a;
 }
@@ -401,23 +443,27 @@ h2 {
   align-items: center;
   align-self: stretch;
 }
+
 .footer--link--container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
 }
-.footer--items > ul {
+
+.footer--items>ul {
   list-style: none;
   display: flex;
   align-items: flex-start;
   gap: 42.667px;
   text-decoration: none;
 }
-.footer--items ul > li > a {
+
+.footer--items ul>li>a {
   text-decoration: none;
 }
-.footer--social--icon > ul {
+
+.footer--social--icon>ul {
   list-style: none;
   display: flex;
   justify-content: flex-end;
@@ -427,18 +473,21 @@ h2 {
   text-decoration: none;
   font-size: 100px;
 }
+
 .divider {
   margin: 106px 0 42.67px;
   height: 1.333px;
   width: 100%;
   background: rgba(40, 41, 56, 0.55);
 }
+
 .footer--content--container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
 }
+
 .footer--content {
   color: var(--black);
   font-size: 18.667px;
@@ -452,6 +501,7 @@ h2 {
     font-size: 68px;
     line-height: 70px;
   }
+
   .skills--section--title {
     font-size: 28px;
     line-height: 40px;
@@ -463,19 +513,24 @@ h2 {
     font-size: 54px;
     line-height: 70px;
   }
+
   .skills--section--container {
     gap: 16px;
   }
+
   .skills--section--card {
     gap: 28px;
   }
+
   .skills--section--card--content {
     gap: 20px;
   }
+
   .skills--section--title {
     font-size: 23px;
     line-height: 30px;
   }
+
   .skills--section--description {
     font-size: 17.333px;
     line-height: 27px;
@@ -486,35 +541,41 @@ h2 {
   .btn-outline-primary {
     display: none;
   }
+
   .hero--section {
     display: flex;
     flex-direction: column-reverse;
     padding-bottom: 70px;
   }
+
   .hero--section--title,
   .hero--section-description,
   .footer--content {
     text-align: center;
   }
+
   .skills--section--container,
   .about--section,
   .portfolio--section--container,
   .portfolio--container-box,
   .footer--link--container,
-  .footer--items > ul,
+  .footer--items>ul,
   .footer--content--container {
     display: flex;
     flex-direction: column;
   }
+
   .skills--section,
   .portfolio--container,
   .hero--section--content,
   .hero--section--content--box {
     align-items: center;
   }
+
   .portfolio--container-box {
     gap: 30px;
   }
+
   .skills--section,
   .testimonial--section,
   .contact--section,
@@ -523,37 +584,45 @@ h2 {
     padding-top: 70px;
     padding-bottom: 70px;
   }
+
   .about--section {
     gap: 20px;
     padding-top: 0;
     padding-bottom: 0;
   }
+
   .testimonial--section--card {
     padding: 25px;
   }
+
   .hero--section--title,
   .skills--section--heading,
   .sections--heading {
     font-size: 35px;
     line-height: 40px;
   }
+
   .hero--section--content--box {
     gap: 10px;
   }
+
   .contact--form--container {
     width: 100%;
   }
+
   .container {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
-  .footer--social--icon > ul,
-  .footer--items > ul {
+
+  .footer--social--icon>ul,
+  .footer--items>ul {
     padding: 0;
     align-items: center;
     font-size: 24px;
   }
+
   .divider {
     margin: 20px;
   }
@@ -586,9 +655,11 @@ h2 {
     display: flex;
     z-index: 200;
   }
+
   .navbar--items {
     display: flex;
   }
+
   .navbar--items {
     position: absolute;
     display: flex;
@@ -600,6 +671,7 @@ h2 {
     width: 100%;
     transition: all ease-in-out 0.4s;
   }
+
   .navbar--items ul {
     flex-direction: column;
     align-items: center;
@@ -607,18 +679,23 @@ h2 {
     padding: 3rem 0 0.6rem;
     z-index: -100;
   }
+
   .navbar--items ul li {
     text-align: center;
   }
+
   .navbar--items ul li a {
     padding: 0.5rem;
   }
+
   .navbar--items {
     z-index: -1000;
   }
+
   .navbar--items.active {
     top: 30px;
   }
+
   .nav__hamburger.active :nth-child(1) {
     transform: rotate(45deg) translate(0.45rem, 0.1875rem);
   }
@@ -631,7 +708,3 @@ h2 {
     transform: rotate(-45deg) translate(0.45rem, -0.1875rem);
   }
 }
-
-
-
-
